package ch.qscqlmpa.magicclipboard.ui.common

object UiTags {
    const val clipboardItem = "clipboardItem"
    const val clipboardItemList = "clipboardItemList"
    const val deviceClipboardValue = "deviceClipboardValue"
    const val dialogNoBtn = "dialogNoBtn"
    const val dialogYesBtn = "dialogYesBtn"
    const val signInWithGoogle = "signInWithGoogle"
    const val mainFab = "mainFab"
    const val pasteFromDeviceClipboard = "pasteFromDeviceClipboard"
    const val pasteFromQrCode = "pasteFromQrCode"
    const val snackbarAction = "snackbarAction"
    const val snackbarText = "snackbarText"
    const val emailInput = "emailInput"
    const val passwordInput = "passwordInput"
    const val signInWithEmailAndPassword = "signInWithEmailAndPassword"
}
