...
    <string name="delete_item">Delete</string>
    <string name="delete_item_cd">Delete clipboard item</string>
    <string name="error_deleting_item">Error deleting item</string>
    <string name="error_scanning_qr_code">Error scanning QR code</string>
    <string name="error_starting_camera">Camera error</string>
    <string name="item_deleted_succesfully">Item deleted</string>
    <string name="item_pasted_in_device_clipboard">Value pasted in device clipboard</string>
    <string name="item_pasted_in_magic_clipboard">Item pasted in MagicClipboard !</string>
    <string name="linkWithAccount">Link with existing account</string>
    <string name="load_clipboard_item_into_device_clipboard_cd">Load clipboard item into device clipboard</string>
    <string name="no">No</string>
    <string name="no_clipboard_items">No clipboard items</string>
    <string name="no_favorite_items">No favorite items</string>
...
